<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- 짝꿍 (캐릭터 페이지) -->
    <string name="mate">짝꿍</string>
    <string name="start_date_with_mate">%s부터 함께했어요</string>
    <string name="level">Lv. %d</string>
    <string name="level_sample">Lv. 2</string>
    <string name="mate_nickname_sample">별명</string>
    <string name="next_level_guide">다음 레벨까지 박수[%d]개를 더 모아보세요!</string>
    <string name="clap_guide_title">습관 박수와 짝꿍의 박수가 달라요!</string>
    <string name="clap_guide_content">레벨업을 위한 박수는 짝꿍 생성 시점부터 카운트돼요. 때문에 습관을 생성한 시점부터 모은 박수와 차이날 수 있어요!</string>
    <string name="create_mate_guide">혼자서는 힘드셨죠?\n짝꿍이 도와드릴게요.</string>
    <string name="create_mate">짝꿍과 함께하기</string>
    <string name="achieve_max_level">최종레벨 달성!</string>
    <string name="save_mate">함께한 짝꿍에 저장하기</string>
    <string name="slash">/</string>
    <string name="max_level_carrot_mate_guide">수고했어요. 더 멋진 내가 된 것 같지 않나요?</string>
    <string name="max_level_whip_mate_guide">수고했어요. 습관을 유지하는데 집중해보세요!</string>
    <string name="max_level_dialog_title">함께한 짝꿍에 저장됐어요.</string>
    <string name="max_level_dialog_description">%d개의 박수를 모두 모았어요!\n최종 레벨을 달성한 짝꿍은\n마이페이지 > 함께한 짝꿍에 저장돼요.</string>
    <string name="going_to_see">보러가기</string>
    <string name="no_habit_dialog_title">습관을 만들어주세요.</string>
    <string name="no_habit_dialog_description">짝꿍과 함께하기 위해서는 미리 생성된\n습관이 있어야 해요.</string>
    <string name="no_habit_dialog_confirm_text">습관 만들기</string>

    <!-- step1 -->
    <string name="connect_habit_guide">어떤 습관을 연결하시겠어요?</string>
    <string name="step_1_button_text" tools:ignore="TypographyFractions">다음 (1/3)</string>
    <string name="medicine">💊</string>
    <string name="habit_sample_title">점심 직후 종합 비타민</string>

    <!-- step2 -->
    <string name="choose_mate_type_guide">어떤 성격의 짝꿍을 원하세요?</string>
    <string name="step_2_button_text" tools:ignore="TypographyFractions">다음 (2/3)</string>
    <string name="whipping_mate">채찍 짝꿍</string>
    <string name="i_need_whipping">엄격한 잔소리가 필요해요!</string>
    <string name="carrot_mate">당근 짝꿍</string>
    <string name="i_need_carrot">따뜻한 응원이 필요해요!</string>

    <!-- step3 -->
    <string name="set_mate_nickname_guide">짝꿍의 별명을 지어주세요.</string>
    <string name="step_3_button_text">짝꿍 시작하기</string>
    <string name="input_nickname_hint">별명을 입력해주세요.</string>
    <string name="available_nickname_guide">별명은 바꿀 수 없어요. 신중하게 지어주세요.</string>
    <string name="count_nickname_length">0</string>
    <string name="count_nickname_max_length">/10</string>

    <!-- onBoarding -->
    <string name="on_boarding_first_title">짝꿍과 함께하는 66일 챌린지</string>
    <string name="on_boarding_second_title">하나의 습관에만 집중</string>
    <string name="on_boarding_third_title">박수를 먹고 자라는 짝꿍</string>
    <string name="on_boarding_first_content">습관이 형성되는 최소의 시간 66일</string>
    <string name="on_boarding_second_content">가장 실천하고 싶은 습관에 짝꿍을 연결해보세요!</string>
    <string name="on_boarding_third_content">습관 실천을 통해 얻은 박수로 짝꿍이 레벨업해요!</string>
    <string name="next">다음</string>
    <string name="with_mate">짝꿍과 함께하기</string>

    <!-- share mate -->
    <string name="share">공유하기</string>
    <string name="save_as_image">이미지로 저장</string>
    <string name="share_story">스토리 공유</string>
    <string name="share_page_guide">\@ZZAKSIM 을 태그해주시면 리포스팅 해드려요</string>
    <string name="save_screen_shot_success">이미지로 저장했습니다.</string>

    <!-- delete mate -->
    <string name="delete_mate">짝꿍이 삭제됐어요.</string>
</resources>
