<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".create.step3.SetMateNicknameActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <ImageView
            android:id="@+id/iv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_arrow_out"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_illustrator"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_box_mate_completion_carrot_blue"
            android:paddingHorizontal="49dp"
            android:paddingVertical="62dp"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/iv_out" />

        <TextView
            android:id="@+id/tv_set_mate_nickname_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/set_mate_nickname_guide"
            android:textAppearance="@style/Typography.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/iv_illustrator" />

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_edittext"
            android:hint="@string/input_nickname_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="10"
            android:paddingStart="16dp"
            android:textAppearance="@style/Typography.Body1"
            android:textColor="@color/gray_800"
            android:textColorHint="@color/gray_400"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/tv_set_mate_nickname_guide" />

        <TextView
            android:id="@+id/tv_count_nickname_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_nickname_length"
            android:textAppearance="@style/Typography.Body4.Medium"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname_max_length"
            app:layout_constraintEnd_toStartOf="@+id/tv_nickname_max_length"
            app:layout_constraintTop_toTopOf="@id/tv_nickname_max_length" />

        <TextView
            android:id="@+id/tv_nickname_max_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/count_nickname_max_length"
            android:textAppearance="@style/Typography.Body4.Medium"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="@id/et_nickname"
            app:layout_constraintEnd_toEndOf="@+id/et_nickname"
            app:layout_constraintTop_toTopOf="@id/et_nickname" />

        <TextView
            android:id="@+id/tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/available_nickname_guide"
            android:textAppearance="@style/Typography.Body4.Medium"
            android:textColor="@color/green_system_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/et_nickname"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rect_gray200_r15"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/step_3_button_text"
            android:textAppearance="@style/Typography.Button1"
            android:textColor="@color/gray_450"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_begin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
