<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".create.step2.ChooseMateTypeActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <ImageView
            android:id="@+id/iv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_arrow_out"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iv_illustrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rect_gray200_r10"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="49dp"
            android:paddingVertical="62dp"
            android:text="임시영역"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/iv_out" />

        <TextView
            android:id="@+id/tv_choose_type_mate_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/connect_habit_guide"
            android:textAppearance="@style/Typography.Title1"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintTop_toBottomOf="@+id/iv_illustrator" />

        <!-- 채찍 짝꿍  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_whipping_mate"
            android:layout_width="0dp"
            android:layout_height="144dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rect_gray100_r10"
            app:layout_constraintTop_toBottomOf="@+id/tv_choose_type_mate_guide"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintEnd_toEndOf="@id/gl_end">

            <TextView
                android:id="@+id/tv_whipping_mate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/whipping_mate"
                android:textAppearance="@style/Typography.Title2"
                android:textColor="@color/gray_800"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/i_need_whipping"
                android:textAppearance="@style/Typography.Body3"
                android:textColor="@color/gray_500"
                app:layout_constraintTop_toBottomOf="@+id/tv_whipping_mate"
                app:layout_constraintStart_toStartOf="@+id/tv_whipping_mate" />

            <ImageView
                android:id="@+id/iv_whipping_mate_illustrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_whipping_mate_unselected"
                android:layout_marginVertical="17dp"
                android:layout_marginEnd="29dp"
                android:text="임시영역"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 당근 짝꿍 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_carrot_mate"
            android:layout_width="0dp"
            android:layout_height="144dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rect_gray100_r10"
            app:layout_constraintTop_toBottomOf="@+id/cl_whipping_mate"
            app:layout_constraintStart_toStartOf="@id/gl_begin"
            app:layout_constraintEnd_toEndOf="@id/gl_end">

            <TextView
                android:id="@+id/tv_carrot_mate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/carrot_mate"
                android:textAppearance="@style/Typography.Title2"
                android:textColor="@color/gray_800"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/i_need_carrot"
                android:textAppearance="@style/Typography.Body3"
                android:textColor="@color/gray_500"
                app:layout_constraintTop_toBottomOf="@+id/tv_carrot_mate"
                app:layout_constraintStart_toStartOf="@+id/tv_carrot_mate" />

            <ImageView
                android:id="@+id/iv_carrot_mate_illustrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_carrot_mate_unselected"
                android:layout_marginVertical="17dp"
                android:layout_marginEnd="29dp"
                android:text="임시영역"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rect_gray800_r15"
            android:textAppearance="@style/Typography.Button1"
            android:text="@string/step_2_button_text"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/gl_begin"
            app:layout_constraintEnd_toEndOf="@id/gl_end" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
